--- a/views/layouts/home/credits.ejs
+++ b/views/layouts/home/credits.ejs
@@ -1,1 +1,46 @@
-<!-- Credits Page code goes here -->
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+  <%- include("./partials/head-links.ejs") %>
+
+</head>
+
+<body>
+
+    <!-- header + navbar -->
+  <%- include("./sections/header-nav.ejs") %>
+
+  <!-- Credits Team info Cards -->
+  <%- include("./sections/credits-team.ejs") %>
+
+  
+  <!-- Footer Section -->
+  <footer id="footer" class="relative z-10 footer-area pt-2">
+    <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
+    <div class="container">
+
+        <!-- contact Section -->
+        <%- include("./sections/contact-form.ejs") %>
+        <!-- contact Section -->
+  
+      <!-- Footer Links -->
+      <%- include("./sections/footer-links.ejs") %>
+      <!-- Footer Links -->
+
+      <!-- Credits -->
+      <%- include("./sections/footer-credits.ejs") %>
+      <!-- Credits -->
+    </div>
+    <div id="particles-2" class="particles"></div>
+  </footer>
+  <!-- Footer Section -->
+
+
+  <!-- Scripts -->
+  <%- include("./partials/scripts.ejs") %>
+  <!-- ./Scripts -->
+
+</body>
+
+</html>
