--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -43,6 +43,157 @@
               <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
                 data-scroll-nav="0" href="#" rel="nofollow">Join Us</a>
             </div>
+            <% } else if(title === "E-Cell | Credits") { %> 
+              <div
+              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              id="navbarOne">
+              <ul id="nav"
+                class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
+                <li class="nav-item md:pb-2 active text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/">Home</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/departments">Departments</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/staff-login">Login</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/staff-register">Register</a>
+                </li>
+              </ul>
+            </div>
+            <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
+              <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                data-scroll-nav="0" href="#feedback" rel="nofollow">FeedBack</a>
+            </div>
+            <!-- Live Events -->
+            <% } else if(title === "E-Cell | Live Events") { %> 
+              <div
+              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              id="navbarOne">
+              <ul id="nav"
+                class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
+                <li class="nav-item md:pb-2 active text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/">Home</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/departments">Departments</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/upcoming/all">Upcoming</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/ongoing/all">Ongoing</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/archived/allr">Archived</a>
+                </li>
+              </ul>
+            </div>
+            <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
+              <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+            </div>
+
+            <!-- upcoming events -->
+            <% } else if(title === "E-Cell | Upcoming Events") { %> 
+              <div
+              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              id="navbarOne">
+              <ul id="nav"
+                class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
+                <li class="nav-item md:pb-2 active text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/">Home</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/departments">Departments</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/live/all">Live</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/ongoing/all">Ongoing</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/archived/allr">Archived</a>
+                </li>
+              </ul>
+            </div>
+            <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
+              <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+            </div>
+            <!-- ongoing events -->
+            <% } else if(title === "E-Cell | Ongoing Events") { %> 
+              <div
+              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              id="navbarOne">
+              <ul id="nav"
+                class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
+                <li class="nav-item md:pb-2 active text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/">Home</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/departments">Departments</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/live/all">Live</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/upcoming/all">Upcoming</a>
+                </li> 
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/archived/all">Archived</a>
+                </li>
+              </ul>
+            </div>
+            <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
+              <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+            </div>
+            <% } else if(title === "E-Cell | Archived Events") { %> 
+              <div
+              class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
+              id="navbarOne">
+              <ul id="nav"
+                class="items-center mr-auto lg:justify-end relative inline-block text-white capitalize duration-300 lg:flex">
+                <li class="nav-item md:pb-2 active text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/">Home</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/departments">Departments</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/live/all">Live</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/ongoing/all">Ongoing</a>
+                </li>
+                <li class="nav-item md:pb-2 text-lg md:text-base">
+                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events/upcoming/all">Upcoming</a>
+                </li>
+              </ul>
+            </div>
+            <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
+              <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                data-scroll-nav="0" href="#Suggest" rel="nofollow">Suggest</a>
+            </div>
             <% } else if(title === "E-Cell | Events") { %>
               <div
                 class="absolute mt-72 lg:mt-0 rounded left-0 z-20 hidden w-full px-5 lg:py-2 duration-300 bg-white shadow lg:w-auto collapse navbar-collapse lg:block top-100 mt-full lg:static lg:bg-transparent lg:shadow-none"
@@ -105,9 +256,6 @@
                 class="text-white items-center mr-auto lg:justify-end relative inline-block capitalize duration-300 lg:flex">
                 <li class="nav-item md:pb-2 active text-lg md:text-base">
                   <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/">Home</a>
-                </li>
-                <li class="nav-item md:pb-2 text-lg md:text-base">
-                  <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
                 </li>
                 <li class="nav-item md:pb-2 text-lg md:text-base">
                   <a class="scroll-page hover:text-red-300 duration-200 mr-5" href="/events">Events</a>
@@ -181,6 +329,83 @@
                 class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
                 data-wow-duration="1.3s" data-wow-delay="1.1s">Explore</a>
             </div>
+            <!-- Live events -->
+            <% } else if (title === "E-Cell | Live Events") { %>
+              <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
+                <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="0.2s">
+                  Live Events
+                </h3>
+                <h2 class="text-5xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
+                  data-wow-delay="0.5s">Live Events at E-Cell</h2>
+                <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
+                  "Don't let the
+                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
+                  <br>- Steve Jobs
+                </p>
+              </div>
+             <!-- upcoming events -->
+             <% } else if (title === "E-Cell | Upcoming Events") { %>
+              <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
+                <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="0.2s">
+                  Upcoming Events
+                </h3>
+                <h2 class="text-5xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
+                  data-wow-delay="0.5s">Upcoming Events at E-Cell</h2>
+                <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
+                  "Don't let the
+                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
+                  <br>- Steve Jobs
+                </p>
+              </div>
+             <!-- ongoing events -->
+             <% } else if (title === "E-Cell | Ongoing Events") { %>
+              <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
+                <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="0.2s">
+                  Ongoing Events
+                </h3>
+                <h2 class="text-5xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
+                  data-wow-delay="0.5s">Ongoing Events at E-Cell</h2>
+                <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
+                  "Don't let the
+                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
+                  <br>- Steve Jobs
+                </p>
+              </div>
+               <!-- archived events -->
+             <% } else if (title === "E-Cell | Archived Events") { %>
+              <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
+                <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="0.2s">
+                  Archived Events
+                </h3>
+                <h2 class="text-5xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
+                  data-wow-delay="0.5s">Archived Events at E-Cell</h2>
+                <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
+                  "Don't let the
+                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
+                  <br>- Steve Jobs
+                </p>
+              </div>
+            <% } else if (title === "E-Cell | Credits") { %>
+              <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
+                <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="0.2s">
+                  Our Team
+                </h3>
+                <h2 class="text-5xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
+                  data-wow-delay="0.5s">Welcome to our Team Section</h2>
+                <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
+                  "Don't let the
+                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
+                  <br>- Steve Jobs
+                </p>
+                <a href="#about"
+                  class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
+                  data-wow-duration="1.3s" data-wow-delay="1.1s">Explore</a>
+              </div>
             <% } else if (title === "E-Cell | Events") { %>
             <div class="pt-32 mb-12 text-center lg:pt-48 header-hero-content">
               <h3 class="text-4xl font-light leading-tight text-white header-sub-title wow fadeInUp"
@@ -253,7 +478,11 @@
         <div class="justify-center row z-50">
           <div class="w-full lg:w-2/3">
             <div class="text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
+              <% if (title != "E-Cell | Credits") { %>
               <img class="rounded-lg" src="/img/hero-steve.jpg" alt="hero">
+              <% } else { %>
+                <img class="rounded-lg mx-auto h-2/3 w-2/3" src="/img/credits_page_4.svg" alt="hero"> 
+              <% } %>
             </div>
           </div>
         </div>
