Added feedback form and dashboard edit form

--- a/views/layouts/home/credits.ejs
+++ b/views/layouts/home/credits.ejs
@@ -21,7 +21,7 @@
     <div class="container">
 
         <!-- contact Section -->
-        <%- include("./sections/contact-form.ejs") %>
+        <%- include("./sections/feedback-form.ejs") %>
         <!-- contact Section -->
   
       <!-- Footer Links -->
