White text bug fixed in dashboard

--- a/views/layouts/auth/staff-register.ejs
+++ b/views/layouts/auth/staff-register.ejs
@@ -71,22 +71,22 @@
                                     <label class="block text-sm text-white">Select Department</label>
                                     <select class=" w-full
                                         px-5
-                                        py-1
+                                        py-2
                                         text-gray-700
                                         bg-gray-300
                                         rounded
                                         focus:outline-none
                                         focus:bg-white" required name="department">
-                                        <option value="">Seleted Department</option>
-                                        <option value="Technical Department">Technical Department</option>
-                                        <option value="Analytical Research Department">Analytical Research Department</option>
-                                        <option value="Creative Desining Department - 3">Creative Desining Department - 3</option>
-                                        <option value="Content Writing Department">Content Writing Department</option>
-                                        <option value="Database Management Department">Database Management Department</option>
-                                        <option value="Event Management Department">Event Management Department</option>
-                                        <option value="Public Relation Department">Public Relation Department</option>
-                                        <option value="Strategic Planning Department">Strategic Planning Department</option>
-                                        <option value="Social Media Marketing Department">Social Media Marketing Department</option>
+                                        <option class="" value="">Seleted Department</option>
+                                        <option class="" value="Technical Department">Technical Department</option>
+                                        <option class="" value="Analytical Research Department">Analytical Research Department</option>
+                                        <option class="" value="Creative Desining Department">Creative Desining Department</option>
+                                        <option class="" value="Content Writing Department">Content Writing Department</option>
+                                        <option class="" value="Database Management Department">Database Management Department</option>
+                                        <option class="" value="Event Management Department">Event Management Department</option>
+                                        <option class="" value="Public Relation Department">Public Relation Department</option>
+                                        <option class="" value="Strategic Planning Department">Strategic Planning Department</option>
+                                        <option class="" value="Social Media Marketing Department">Social Media Marketing Department</option>
                                     </select>
                                     <p class="text-sm text-red-900 hidden mt-3" id="error">Please fill all the required
                                         fields.
