--- a/views/layouts/dashboard/sections/event-create-form.ejs
+++ b/views/layouts/dashboard/sections/event-create-form.ejs
@@ -9,7 +9,7 @@
 
     <div class="flex justify-center pt-2">
       <div class="flex">
-        <h1 class="text-gray-600 font-bold dark:text-white md:text-2xl text-xl">Event Creation Form</h1>
+        <h1 class="text-gray-600 font-bold md:text-2xl text-xl">Event Creation Form</h1>
       </div>
     </div>
 
