--- a/views/layouts/home/credits.ejs
+++ b/views/layouts/home/credits.ejs
@@ -55,7 +55,7 @@
             ev.preventDefault();
             let myForm = ev.target;
             // after banckend chnage update this
-            fetch("/", {
+            fetch("/feedback", {
                 body: JSON.stringify(convertFD2JSON(new FormData(myForm))),
                 method: "POST",
                 headers: {
