--- a/views/layouts/home/sections/event-registration.ejs
+++ b/views/layouts/home/sections/event-registration.ejs
@@ -1,4 +1,4 @@
-<div class="px-6 pt-3 pb-5 mb-10 bg-white rounded-lg shadow-2xl md:px-12 subscribe-area wow fadeIn"
+<div id="event-registration" class="px-6 pt-3 pb-5 mb-10 bg-white rounded-lg shadow-2xl md:px-12 subscribe-area wow fadeIn"
   data-wow-duration="1s" data-wow-delay="0.5s">
   <div class="flex flex-col justify-center items-center">
     <div class="w-full lg:w-1/2">
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="w-full lg:w-1/2">
-      <div id="event-registration" class="mt-8 subscribe-form">
+      <div class="mt-8 subscribe-form">
         <form class="relative focus:outline-none space-y-5">
           <input type="text"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
