--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -40,8 +40,8 @@
               </ul>
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
-              <a class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#" rel="nofollow">Join Us</a>
+              <a class="scroll-page inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+                data-scroll-nav="0" href="#contact" rel="nofollow">Contact Us</a>
             </div>
             <% } else if(title === "E-Cell | Credits") { %> 
               <div
@@ -262,7 +262,7 @@
             </div>
             <div class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
               <a class="scroll-page inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
-                data-scroll-nav="0" href="#internship">Join Us</a>
+                data-scroll-nav="0" href="#event-registration">Join Us</a>
             </div>
             <% } else if (title === "E-Cell | Departments") { %>
               <div
