Credits page design updates

--- a/views/layouts/home/credits.ejs
+++ b/views/layouts/home/credits.ejs
@@ -54,8 +54,7 @@
         function handleForm(ev) {
             ev.preventDefault();
             let myForm = ev.target;
-            // after banckend chnage update this
-            fetch("/", {
+            fetch("/feedback", {
                 body: JSON.stringify(convertFD2JSON(new FormData(myForm))),
                 method: "POST",
                 headers: {
