--- a/views/layouts/home/sections/vision.ejs
+++ b/views/layouts/home/sections/vision.ejs
@@ -6,7 +6,7 @@
     <div class="wow fadeIn lg:flex-grow md:w-1/2 md:pl-10 flex flex-col md:items-start md:text-left items-center text-center" data-wow-duration="1s" data-wow-delay="0.5s">
       <div class="mb-4 section-title">
         <!-- <div class="line"></div> -->
-        <h3 class="text-4xl font-bold border-t-4 w-3/4 text-center border-red-400 pt-4 text-black ml-7">Vision</h3>
+        <h3 class="text-4xl font-bold  w-3/4 text-center border-t-4 border-red-400 pt-4 text-black ml-7">Vision</h3>
       </div>
       <p class="mb-8 ml-7 leading-relaxed">
         <% if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %> 
