--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -4,7 +4,10 @@
             
         <!-- Lead Card-->
         <div class="flex flex-col justify-center items-center max-w-sm mx-auto mt-8">
-        <div class="w-full flex font-mono justify-center items-center text-4xl font-bold mt-4">Team Leader</div>
+        <div class="mb-4 section-title">
+            <!-- <div class="line"></div> -->
+            <h3 class="text-4xl font-bold  w-full text-center border-t-4 border-red-400 pt-4 text-black">Team Leader</h3>
+            </div>
           <div class="w-full p-6 flex flex-col flex-grow flex-shrink rounded-lg">
                 <div class="flex-1 bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
                     <a href="#" class="flex flex-wrap no-underline hover:no-underline">
@@ -34,7 +37,7 @@
         <div class="flex flex-wrap justify-between pt-6 -mx-6">
 
 <!-- Team Heads -->
-            <div class="w-full flex justify-center font-mono items-center text-4xl font-bold mt-12">Team Heads</div>
+            <div class="w-full flex justify-center font-bold items-center text-4xl font-bold mt-12">Team Heads</div>
             <!--1/3 col -->
             <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink rounded">
                 <div class="flex-1 bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
@@ -103,7 +106,7 @@
 
 <!-- Active Members -->
             <!-- Sejal Madan -->
-            <div class="w-full flex justify-center font-mono items-center text-4xl font-bold mt-20">Active Team Members</div>
+            <div class="w-full flex justify-center font-bold items-center text-4xl font-bold mt-20">Active Team Members</div>
             <!--1/3 col -->
             <div class="w-full md:w-1/3 h-2/3 p-6 flex flex-col flex-grow flex-shrink">
                 <div class="flex-1 bg-white rounded-lg rounded-b-none overflow-hidden shadow-lg">
