--- a/views/layouts/dashboard/sections/department-edit-form.ejs
+++ b/views/layouts/dashboard/sections/department-edit-form.ejs
@@ -1,6 +1,6 @@
 <!-- Department Edit form goes here -->
 <div class="flex h-full items-center justify-center  mt-6 mb-6">
-    <div class="grid bg-gray-200 rounded-lg shadow-xl w-11/12 md:w-9/12 lg:w-1/2">
+    <div class="grid bg-gray-200 rounded-lg shadow-xl w-full mx-5">
   
       <div class="flex justify-center mt-12">
         <div class="flex">
