--- a/views/layouts/dashboard/sections/event-edit-form.ejs
+++ b/views/layouts/dashboard/sections/event-edit-form.ejs
@@ -1,6 +1,6 @@
 <!-- Code for event-edit form -->
 <form class="flex h-full items-center justify-center pt-10 pb-10">
-  <div class="grid bg-gray-200 dark:bg-gray-900 rounded-lg shadow-xl w-full mx-5">
+  <div class="grid bg-gray-200 rounded-lg shadow-xl w-full mx-5">
     <!-- <div class="flex justify-center py-4">
         <div class="flex bg-purple-200 rounded-full md:p-4 p-2 border-2 border-purple-300">
           <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path></svg>
@@ -9,7 +9,7 @@
 
     <div class="flex justify-center pt-2">
       <div class="flex">
-        <h1 class="text-gray-600 font-bold dark:text-white md:text-2xl text-xl">Edit Event</h1>
+        <h1 class="text-gray-600 font-bold  md:text-2xl text-xl">Edit Event</h1>
       </div>
     </div>
 
