--- a/views/layouts/dashboard/sections/profile-form.ejs
+++ b/views/layouts/dashboard/sections/profile-form.ejs
@@ -17,8 +17,8 @@
 
     <div class="flex flex-col">
       <label for="name" class="hidden">Description</label>
-      <textarea type="text" value="<%= staffData.description %>" name="description" id="description" placeholder="Description/Bio"
-        class="w-full mt-2 h-48 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 dark:text-gray-50 font-semibold focus:border-blue-500 focus:outline-none"></textarea>
+      <textarea type="text" name="description" id="description" placeholder="Description/Bio"
+        class="w-full mt-2 h-48 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 dark:text-gray-50 font-semibold focus:border-blue-500 focus:outline-none"><%= staffData.description %></textarea>
     </div>
 
     <div class="flex flex-col mt-2">
